tests/sksl/errors/DuplicateRTAdjust.glsl
### Compilation failed:

error: 5: symbol 'sk_RTAdjust' was already defined
float4 sk_RTAdjust;
^^^^^^^^^^^^^^^^^^
1 error
